--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
         "0tBd2sw71Fhh"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOU77okF/YMZ0tIYBBHgCYW",
+      "authorship_tag": "ABX9TyMVP/YvvT1OGUNCu5DQY0f8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6100,7 +6100,11 @@
       "metadata": {
         "id": "omD5dB9I0vtZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "d765ac51-8d01-41f0-d2fb-4e72f1c341b4"
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -6124,19 +6128,23 @@
         "num_labels = yy.shape[1]\n",
         "filter_size = 2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "zvh7gP4MzJ6E",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 691
-        },
-        "outputId": "d2ff2119-1b3e-40fa-c51c-75fee9b0fa60"
+        "colab": {}
       },
       "source": [
         "# CNN Modell\n",
@@ -6172,62 +6180,15 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Model: \"sequential\"\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "conv2d (Conv2D)              (None, 39, 173, 16)       80        \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d (MaxPooling2D) (None, 19, 86, 16)        0         \n",
-            "_________________________________________________________________\n",
-            "dropout (Dropout)            (None, 19, 86, 16)        0         \n",
-            "_________________________________________________________________\n",
-            "conv2d_1 (Conv2D)            (None, 18, 85, 32)        2080      \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 9, 42, 32)         0         \n",
-            "_________________________________________________________________\n",
-            "dropout_1 (Dropout)          (None, 9, 42, 32)         0         \n",
-            "_________________________________________________________________\n",
-            "conv2d_2 (Conv2D)            (None, 8, 41, 64)         8256      \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 4, 20, 64)         0         \n",
-            "_________________________________________________________________\n",
-            "dropout_2 (Dropout)          (None, 4, 20, 64)         0         \n",
-            "_________________________________________________________________\n",
-            "conv2d_3 (Conv2D)            (None, 3, 19, 128)        32896     \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_3 (MaxPooling2 (None, 1, 9, 128)         0         \n",
-            "_________________________________________________________________\n",
-            "dropout_3 (Dropout)          (None, 1, 9, 128)         0         \n",
-            "_________________________________________________________________\n",
-            "global_average_pooling2d (Gl (None, 128)               0         \n",
-            "_________________________________________________________________\n",
-            "dense (Dense)                (None, 10)                1290      \n",
-            "=================================================================\n",
-            "Total params: 44,602\n",
-            "Trainable params: 44,602\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "jUA0nhWszN7f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 524
-        },
-        "outputId": "0fbbfd91-4549-4919-c916-c86a253d4686"
+        "colab": {}
       },
       "source": [
         "num_epochs = 12\n",
@@ -6241,41 +6202,8 @@
         "score = model.evaluate(x_test, y_test, verbose=0)\n",
         "print(\"Testing Accuracy: \", score[1])"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/12\n",
-            "55/55 [==============================] - 1s 21ms/step - loss: 3.6128 - accuracy: 0.2160 - val_loss: 1.9735 - val_accuracy: 0.2891\n",
-            "Epoch 2/12\n",
-            "55/55 [==============================] - 1s 14ms/step - loss: 1.6722 - accuracy: 0.4079 - val_loss: 1.7246 - val_accuracy: 0.3789\n",
-            "Epoch 3/12\n",
-            "55/55 [==============================] - 1s 14ms/step - loss: 1.4365 - accuracy: 0.4862 - val_loss: 1.5460 - val_accuracy: 0.4442\n",
-            "Epoch 4/12\n",
-            "55/55 [==============================] - 1s 15ms/step - loss: 1.3128 - accuracy: 0.5390 - val_loss: 1.4342 - val_accuracy: 0.5072\n",
-            "Epoch 5/12\n",
-            "55/55 [==============================] - 1s 13ms/step - loss: 1.2255 - accuracy: 0.5628 - val_loss: 1.3459 - val_accuracy: 0.5507\n",
-            "Epoch 6/12\n",
-            "55/55 [==============================] - 1s 13ms/step - loss: 1.1308 - accuracy: 0.5983 - val_loss: 1.2746 - val_accuracy: 0.5638\n",
-            "Epoch 7/12\n",
-            "55/55 [==============================] - 1s 13ms/step - loss: 1.0633 - accuracy: 0.6288 - val_loss: 1.1982 - val_accuracy: 0.5793\n",
-            "Epoch 8/12\n",
-            "55/55 [==============================] - 1s 15ms/step - loss: 0.9934 - accuracy: 0.6563 - val_loss: 1.1864 - val_accuracy: 0.5793\n",
-            "Epoch 9/12\n",
-            "55/55 [==============================] - 1s 15ms/step - loss: 0.9364 - accuracy: 0.6759 - val_loss: 1.1441 - val_accuracy: 0.5942\n",
-            "Epoch 10/12\n",
-            "55/55 [==============================] - 1s 15ms/step - loss: 0.9028 - accuracy: 0.6876 - val_loss: 1.1105 - val_accuracy: 0.6119\n",
-            "Epoch 11/12\n",
-            "55/55 [==============================] - 1s 14ms/step - loss: 0.8637 - accuracy: 0.7067 - val_loss: 1.0854 - val_accuracy: 0.6136\n",
-            "Epoch 12/12\n",
-            "55/55 [==============================] - 1s 14ms/step - loss: 0.8295 - accuracy: 0.7171 - val_loss: 1.0298 - val_accuracy: 0.6531\n",
-            "Training Accuracy:  0.6794559955596924\n",
-            "Testing Accuracy:  0.6531196236610413\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -6300,95 +6228,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "me9hqtdlDgbJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "Vorbereitung:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hmuJsBBENQdd",
-        "colab_type": "code",
-        "outputId": "72d043cd-92a0-4e8a-b995-636e19c18508",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
-        }
-      },
-      "source": [
-        "bla= np.array([[4,5]])\n",
-        "bla = np.concatenate((bla, [[1,2]]))\n",
-        "print(bla)\n"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[4 5]\n",
-            " [1 2]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Yg1XP3yLN7JG",
-        "colab_type": "code",
-        "outputId": "6f79775f-c0a4-465a-cef2-94413363baf5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
-        }
-      },
-      "source": [
-        "%tensorflow_version 2.x\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
-        "from tensorflow.keras.layers import Convolution2D, Conv2D, MaxPooling2D, GlobalAveragePooling2D\n",
-        "from tensorflow.keras.optimizers import Adam\n",
-        "from sklearn import metrics\n",
-        "from sklearn.model_selection import PredefinedSplit\n",
-        "\n",
-        "le = LabelEncoder()\n",
-        "# featuresdf[\"klasse\"] = to_categorical(le.fit_transform(featuresdf[\"klasse\"]))\n",
-        "print(featuresdf[\"klasse\"][3])\n",
-        "\n",
-        "x_folds = [[featuresdf[featuresdf[\"fold\"]==1].feature.tolist()]]\n",
-        "y_folds = [[featuresdf[featuresdf[\"fold\"]==1].klasse.tolist()]]\n",
-        "for e in range(2,10,1):\n",
-        "  x_folds.append(featuresdf[featuresdf[\"fold\"]==e].feature.tolist())\n",
-        "  y_folds.append(featuresdf[featuresdf[\"fold\"]==e].klasse.tolist())\n",
-        "test_fold = list(range(0,10))\n",
-        "\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X, yy, test_size=0.2, \n",
-        "                                                    random_state=42)\n",
-        "print(x_train.shape)\n",
-        "num_labels = yy.shape[1]\n",
-        "filter_size = 2"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1.0\n",
-            "(6985, 40, 174)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "YBoP_RhNDlho",
         "colab_type": "text"
       },
@@ -6404,38 +6243,42 @@
         "colab": {}
       },
       "source": [
-        "# CNN Modell\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
+        "from tensorflow.keras.layers import Convolution2D, Conv2D, MaxPooling2D, GlobalAveragePooling2D\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from sklearn import metrics\n",
+        "\n",
         "zeilen = 40\n",
         "spalten = 174\n",
+        "klassen_anz = 10\n",
+        "filter_size = 2\n",
         "\n",
-        "x_train = x_train.reshape(x_train.shape[0], zeilen, spalten, 1)\n",
-        "x_test = x_test.reshape(x_test.shape[0], zeilen, spalten, 1)\n",
+        "def create_model():\n",
+        "  model = Sequential()\n",
+        "  model.add(Conv2D(filters=16, kernel_size=2, input_shape=(zeilen, spalten, 1), \n",
+        "                  activation=\"relu\"))\n",
+        "  model.add(MaxPooling2D(pool_size=2))\n",
+        "  model.add(Dropout(0.2))\n",
         "\n",
-        "model = Sequential()\n",
-        "model.add(Conv2D(filters=16, kernel_size=2, input_shape=(zeilen, spalten, 1), \n",
-        "                 activation=\"relu\"))\n",
-        "model.add(MaxPooling2D(pool_size=2))\n",
-        "model.add(Dropout(0.2))\n",
+        "  model.add(Conv2D(filters=32, kernel_size=2, activation='relu'))\n",
+        "  model.add(MaxPooling2D(pool_size=2))\n",
+        "  model.add(Dropout(0.2))\n",
         "\n",
-        "model.add(Conv2D(filters=32, kernel_size=2, activation='relu'))\n",
-        "model.add(MaxPooling2D(pool_size=2))\n",
-        "model.add(Dropout(0.2))\n",
+        "  model.add(Conv2D(filters=64, kernel_size=2, activation='relu'))\n",
+        "  model.add(MaxPooling2D(pool_size=2))\n",
+        "  model.add(Dropout(0.2))\n",
         "\n",
-        "model.add(Conv2D(filters=64, kernel_size=2, activation='relu'))\n",
-        "model.add(MaxPooling2D(pool_size=2))\n",
-        "model.add(Dropout(0.2))\n",
+        "  model.add(Conv2D(filters=128, kernel_size=2, activation='relu'))\n",
+        "  model.add(MaxPooling2D(pool_size=2))\n",
+        "  model.add(Dropout(0.2))\n",
+        "  model.add(GlobalAveragePooling2D())\n",
         "\n",
-        "model.add(Conv2D(filters=128, kernel_size=2, activation='relu'))\n",
-        "model.add(MaxPooling2D(pool_size=2))\n",
-        "model.add(Dropout(0.2))\n",
-        "model.add(GlobalAveragePooling2D())\n",
+        "  model.add(Dense(klassen_anz, activation='softmax'))\n",
         "\n",
-        "model.add(Dense(num_labels, activation='softmax'))\n",
-        "\n",
-        "model.compile(loss='categorical_crossentropy', metrics=['accuracy'], \n",
-        "              optimizer='adam')\n",
-        "\n",
-        "model.summary()"
+        "  model.compile(loss='categorical_crossentropy', metrics=['accuracy'], \n",
+        "                optimizer='adam')\n",
+        "  return model"
       ],
       "execution_count": 0,
       "outputs": []
@@ -6443,34 +6286,138 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RTKoae7pDnve",
+        "id": "me9hqtdlDgbJ",
         "colab_type": "text"
       },
       "source": [
-        "Training mit dem CNN Modell:"
+        "Training und Evaluation:"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4dEIDCyTDqXU",
+        "id": "tOfpvfVKMFhP",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 785
+        },
+        "outputId": "022a76b1-2584-4290-b59f-46c295310992"
       },
       "source": [
-        "num_epochs = 12\n",
-        "num_batch_size = 128\n",
+        "%tensorflow_version 2.x\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from tensorflow.keras.utils import to_categorical\n",
         "\n",
-        "model.fit(x_train, y_train, batch_size=num_batch_size, epochs=num_epochs, validation_data=(x_test, y_test))\n",
+        "zeilen = 40\n",
+        "spalten = 174\n",
         "\n",
-        "score = model.evaluate(x_train, y_train, verbose=0)\n",
-        "print(\"Training Accuracy: \", score[1])\n",
+        "num_epochs = 72\n",
+        "num_batch_size = 256\n",
         "\n",
-        "score = model.evaluate(x_test, y_test, verbose=0)\n",
-        "print(\"Testing Accuracy: \", score[1])"
+        "le = LabelEncoder()\n",
+        "accuracies = []\n",
+        "\n",
+        "for f in range(1,11):\n",
+        "  X_train = np.array(featuresdf[featuresdf[\"fold\"] != f].feature.tolist())\n",
+        "  X_test = np.array(featuresdf[featuresdf[\"fold\"] == f].feature.tolist())\n",
+        "  y_train = np.array(featuresdf[featuresdf[\"fold\"] != f].klasse.tolist())\n",
+        "  y_test = np.array(featuresdf[featuresdf[\"fold\"] == f].klasse.tolist())\n",
+        "\n",
+        "  yy_train = to_categorical(le.fit_transform(y_train))\n",
+        "  yy_test = to_categorical(le.fit_transform(y_test))\n",
+        "\n",
+        "  X_train = X_train.reshape(X_train.shape[0], zeilen, spalten, 1)\n",
+        "  X_test = X_test.reshape(X_test.shape[0], zeilen, spalten, 1)\n",
+        "\n",
+        "  model = create_model()\n",
+        "  model.fit(X_train, yy_train, batch_size=num_batch_size, epochs=num_epochs, \n",
+        "            verbose=0, validation_data=(X_test, yy_test))\n",
+        "\n",
+        "  print(\"Run \", f)\n",
+        "  score = model.evaluate(X_train, yy_train, verbose=0)\n",
+        "  print(\"Training Accuracy: \", score[1])\n",
+        "  score = model.evaluate(X_test, yy_test, verbose=0)\n",
+        "  print(\"Testing Accuracy: \", score[1],\"\\n\")\n",
+        "  accuracies.append(score[1])\n",
+        "\n",
+        "print(\"Average Accuracy\", np.mean(accuracies))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Run  1\n",
+            "Training Accuracy:  0.9539381861686707\n",
+            "Testing Accuracy:  0.5693012475967407 \n",
+            "\n",
+            "Run  2\n",
+            "Training Accuracy:  0.9622641801834106\n",
+            "Testing Accuracy:  0.5743243098258972 \n",
+            "\n",
+            "Run  3\n",
+            "Training Accuracy:  0.9546560645103455\n",
+            "Testing Accuracy:  0.5794594883918762 \n",
+            "\n",
+            "Run  4\n",
+            "Training Accuracy:  0.9408421516418457\n",
+            "Testing Accuracy:  0.5535353422164917 \n",
+            "\n",
+            "Run  5\n",
+            "Training Accuracy:  0.9447152614593506\n",
+            "Testing Accuracy:  0.6303418874740601 \n",
+            "\n",
+            "Run  6\n",
+            "Training Accuracy:  0.9563788175582886\n",
+            "Testing Accuracy:  0.6026731729507446 \n",
+            "\n",
+            "Run  7\n",
+            "Training Accuracy:  0.9277932643890381\n",
+            "Testing Accuracy:  0.6133651733398438 \n",
+            "\n",
+            "Run  8\n",
+            "Training Accuracy:  0.9454958438873291\n",
+            "Testing Accuracy:  0.5694789290428162 \n",
+            "\n",
+            "Run  9\n",
+            "Training Accuracy:  0.957301676273346\n",
+            "Testing Accuracy:  0.6519607901573181 \n",
+            "\n",
+            "Run  10\n",
+            "Training Accuracy:  0.9609879851341248\n",
+            "Testing Accuracy:  0.622461199760437 \n",
+            "\n",
+            "Average Accuracy 0.5966901540756225\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5VHw_zC9aq4T",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "9be7c6c6-0b95-4083-fdaf-448b43d6de49"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.5535294234752655\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
